text align in text box and fix #4

--- a/Victor/CSS/styles.css
+++ b/Victor/CSS/styles.css
@@ -11,3 +11,6 @@
 	padding-left: 15px;
 	padding-bottom: 20px;
 }
+#Resume{
+	text-align: left;
+}
